--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nazmul Hossain</title>
-  <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
+  <title>Lavish Gupta</title>
+ 
+  <link rel="shortcut icon" href="./src/assets/images/favicon-port.png" type="image/png" sizes="48*48"/>
+   <link rel="shortcut icon" href="./src/assets/images/favicon-port.png" type="image/png" sizes="16*16"/>
 </head>
 
 <body>
